--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@ $--txtlight-shadow: 5px 5px 10px rgba(245, 245, 245, 0.4);
 
 // COMPONENTS STYLING ////////////////////////////////////////
 
-// header 
+// header - This styling will only include the logo & company name
 .main-header {
   h1 {
     text-align: center;
