--- a/src/App.scss
+++ b/src/App.scss
@@ -30,6 +30,7 @@ $--txtlight-shadow: 5px 5px 10px rgba(245, 245, 245, 0.4);
   h1 {
     text-align: center;
     font-size: $--size-h1;
+    font-family: 'indie-flower';
   }
 
   .main-logo {
