created carousel component and updated notes in scss

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,10 @@ $--txtlight-shadow: 5px 5px 10px rgba(245, 245, 245, 0.4);
   }
 }
 
+// home carousel - This styling only pertains to the carousel located on the homepage
+
+
+
 // footer - This styling will only affect anything outside of the APP CONTAINER
 .site-footer {
   background-color: #fdb44b;
