--- a/src/App.scss
+++ b/src/App.scss
@@ -101,6 +101,7 @@ $--txtlight-shadow: 5px 5px 10px rgba(245, 245, 245, 0.4);
   }
 }
 
+// styling for the buttons on the shop page
 .shop-item {
   .add-button {
     background-color: #900048;
