--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,8 @@ $--txtlight-shadow: 5px 5px 10px rgba(245, 245, 245, 0.4);
   margin-top: 100px;
   margin-bottom: 50px;
   max-width: 100%;
-  height: '100px';
+  height: auto;
+  background-size: cover;
 }
 
 
