updated and styled contact form

--- a/src/App.scss
+++ b/src/App.scss
@@ -72,6 +72,11 @@ $--txtlight-shadow: 5px 5px 10px rgba(245, 245, 245, 0.4);
   }
 }
 
+// contact-form styling -- Contact form is only located in the Contact Page
+.contact-form {
+  margin-top: 50px;
+}
+
 // PAGES STYLING & MEDIA QUERIES ////////////////////////////////
 
 // homepage -- Styling pertaining to the home page
